--- a/style/style.css
+++ b/style/style.css
@@ -49,7 +49,13 @@ nav ul li, nav ul li a
 }
 .contRegistro .formRegistro
 {
-	width: 50px;
-	height: 50px;
+	width: 40%;
 	background-color: black;
+}
+.formRegistro form
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
